Add route and transport_duration to OriPack.